--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -29,6 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/color_141414_F3F4F5"
+                android:paddingBottom="18dp"
                 app:layout_constraintTop_toTopOf="parent">
 
 
@@ -133,19 +134,12 @@
                         app:layout_constraintTop_toTopOf="@+id/tv_match"
                         tools:text="0.89" />
 
-                    <!-- 當底下view隱藏時 當作padding的view -->
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/margin_18"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_match"/>
-
                     <EditText
                         android:id="@+id/et_bet"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/et_bet_height"
                         android:layout_marginTop="7dp"
                         android:layout_marginEnd="@dimen/margin_24"
-                        android:layout_marginBottom="@dimen/margin_18"
                         android:background="@drawable/effect_select_bet_edit_text"
                         android:hint="@string/bet_info_input_quota"
                         android:inputType="numberDecimal"
@@ -156,7 +150,7 @@
                         android:textColorHint="@color/color_939393_cccccc"
                         android:textSize="@dimen/textSize16sp"
                         android:visibility="visible"
-                        app:layout_constraintBottom_toTopOf="@+id/tvErrorMessage"
+                        app:layout_constraintBottom_toTopOf="@id/tv_bet_lock"
                         app:layout_constraintEnd_toStartOf="@+id/btnRecharge"
                         app:layout_constraintStart_toStartOf="@+id/tv_odds_content"
                         app:layout_constraintTop_toBottomOf="@+id/cl_to_win" />
@@ -215,23 +209,43 @@
 
                     </LinearLayout>
 
-
-                    <TextView
-                        android:id="@+id/tvErrorMessage"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:id="@+id/ll_single_tips"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginTop="10dp"
-                        android:textColor="@color/color_E44438_e44438"
-                        android:textSize="@dimen/textSize13sp"
-                        android:visibility="gone"
-                        app:layout_constraintBottom_toTopOf="@+id/layoutKeyBoard"
-                        app:layout_constraintStart_toStartOf="@+id/et_bet"
-                        app:layout_constraintTop_toBottomOf="@+id/et_bet"
-                        tools:text="@string/bet_info_list_minimum_limit_amount"
-                        tools:visibility="gone" />
+                        android:orientation="vertical"
+                        app:layout_constraintBottom_toTopOf="@id/layoutKeyBoard">
 
+                        <TextView
+                            android:id="@+id/tvErrorMessage"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingTop="6dp"
+                            android:layout_marginHorizontal="24dp"
+                            android:textColor="@color/color_E44438_e44438"
+                            android:textSize="@dimen/textSize13sp"
+                            android:visibility="gone"
+                            app:layout_constraintBottom_toTopOf="@id/tv_odd_content_changed"
+                            app:layout_constraintStart_toStartOf="@id/et_bet"
+                            tools:text="@string/bet_info_list_minimum_limit_amount"
+                            tools:visibility="visible" />
+
+                        <TextView
+                            android:id="@+id/tv_odd_content_changed"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="@dimen/margin_24"
+                            android:drawableStart="@drawable/ic_odds_change_tip"
+                            android:drawablePadding="@dimen/margin_4"
+                            android:gravity="center_vertical"
+                            android:paddingTop="@dimen/margin_6"
+                            android:text="@string/bet_info_odd_content_changed2"
+                            android:textColor="@color/color_E44438_e44438"
+                            android:textSize="@dimen/textSize12sp"
+                            android:visibility="gone"
+                            app:layout_constraintBottom_toTopOf="@id/layoutKeyBoard"
+                            tools:visibility="visible" />
+                    </LinearLayout>
 
                     <include
                         android:id="@+id/cl_to_win"
@@ -251,52 +265,12 @@
                         android:id="@+id/layoutKeyBoard"
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
-                        android:visibility="gone"
                         android:layout_marginHorizontal="24dp"
-                        android:layout_marginTop="10dp"
-                        app:layout_constraintTop_toBottomOf="@+id/tvErrorMessage" />
-                    <!--                        <View-->
-                    <!--                            android:layout_width="match_parent"-->
-                    <!--                            android:layout_height="150dp"-->
-                    <!--                            app:layout_constraintBottom_toBottomOf="parent"-->
-                    <!--                            app:layout_constraintTop_toBottomOf="@+id/et_bet"-->
-                    <!--                            android:background="@color/blueDeep"/>-->
-
-                    <!--                    <LinearLayout-->
-                    <!--                        android:id="@+id/ll_keyboard_bg"-->
-                    <!--                        android:layout_width="match_parent"-->
-                    <!--                        android:layout_height="wrap_content"-->
-                    <!--                        android:orientation="horizontal"-->
-                    <!--                        android:background="@color/color_060F20"-->
-                    <!--                        android:paddingStart="8dp"-->
-                    <!--                        android:paddingEnd="8dp"-->
-                    <!--                        android:paddingTop="6dp"-->
-                    <!--                        app:layout_constraintTop_toBottomOf="@+id/et_bet"-->
-                    <!--                        app:layout_constraintBottom_toBottomOf="parent"-->
-                    <!--                        android:paddingBottom="6dp"-->
-                    <!--                        android:visibility="gone" >-->
-
-                    <!--                        <org.cxct.sportlottery.ui.common.CustomKeyBoardView-->
-                    <!--                            android:id="@+id/kv_keyboard"-->
-                    <!--                            android:layout_width="match_parent"-->
-                    <!--                            android:layout_height="wrap_content"-->
-                    <!--                            android:focusable="true"-->
-                    <!--                            android:background="@color/color_060F20"-->
-                    <!--                            android:focusableInTouchMode="true"-->
-                    <!--                            android:keyBackground="@drawable/bg_frame_6dp_white"-->
-                    <!--                            android:visibility="gone" />-->
-
-                    <!--                    </LinearLayout>-->
-
-                    <View
-                        android:id="@+id/v_bet_lock"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:background="@color/transparent_black_8"
+                        android:layout_marginBottom="8dp"
+                        android:paddingTop="10dp"
                         android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        tools:visibility="gone" />
+                        tools:visibility="visible" />
 
                     <View
                         android:id="@+id/v_no_parlay"
@@ -309,23 +283,6 @@
                         tools:visibility="gone" />
 
                     <TextView
-                        android:id="@+id/tv_odd_content_changed"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin_24"
-                        android:drawableStart="@drawable/ic_odds_change_tip"
-                        android:drawablePadding="@dimen/margin_4"
-                        android:gravity="center_vertical"
-                        android:paddingTop="@dimen/margin_6"
-                        android:paddingBottom="@dimen/margin_18"
-                        android:text="@string/bet_info_odd_content_changed2"
-                        android:textColor="@color/color_E44438_e44438"
-                        android:textSize="@dimen/textSize12sp"
-                        android:visibility="gone"
-                        app:layout_constraintTop_toBottomOf="@+id/et_bet"
-                        tools:visibility="visible" />
-
-                    <TextView
                         android:id="@+id/tv_bet_lock"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -334,13 +291,12 @@
                         android:drawablePadding="@dimen/margin_4"
                         android:gravity="center_vertical"
                         android:paddingTop="@dimen/margin_6"
-                        android:paddingBottom="@dimen/margin_18"
                         android:text="@string/bet_info_bet_lock_hint"
                         android:textColor="@color/color_E44438_e44438"
                         android:textSize="@dimen/textSize12sp"
                         android:visibility="gone"
-                        app:layout_constraintTop_toBottomOf="@+id/et_bet"
-                        tools:visibility="gone" />
+                        app:layout_constraintBottom_toTopOf="@id/tv_no_parlay"
+                        tools:visibility="visible" />
 
                     <TextView
                         android:id="@+id/tv_no_parlay"
@@ -349,13 +305,12 @@
                         android:layout_marginHorizontal="@dimen/margin_24"
                         android:gravity="center_vertical"
                         android:paddingTop="@dimen/margin_6"
-                        android:paddingBottom="@dimen/margin_18"
                         android:text="@string/bet_info_no_parlay_hint"
                         android:textColor="@color/color_E44438_e44438"
                         android:textSize="@dimen/textSize12sp"
                         android:visibility="gone"
-                        app:layout_constraintTop_toBottomOf="@+id/et_bet"
-                        tools:visibility="gone" />
+                        app:layout_constraintBottom_toTopOf="@id/ll_single_tips"
+                        tools:visibility="visible" />
 
                     <ImageView
                         android:id="@+id/iv_close"
@@ -372,6 +327,16 @@
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <View
+                android:id="@+id/v_bet_lock"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:background="@color/transparent_black_8"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="gone" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
