--- a/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
@@ -27,13 +27,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/color_191919_FCFCFC"
+            android:paddingBottom="18dp"
             app:layout_constraintHeight_default="wrap">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingVertical="@dimen/margin_10"
+                android:paddingTop="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -140,8 +141,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:layout_marginTop="@dimen/margin_4"
-                    android:layout_marginBottom="@dimen/margin_4"
+                    android:paddingTop="6dp"
                     android:textColor="@color/color_E44438_e44438"
                     android:textSize="@dimen/textSize13sp"
                     android:visibility="gone"
@@ -149,17 +149,18 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/et_bet_parlay"
                     tools:text="@string/bet_info_list_minimum_limit_amount"
-                    tools:visibility="gone" />
+                    tools:visibility="visible" />
 
                 <org.cxct.sportlottery.util.KeyboardView
                     android:id="@+id/layoutKeyBoard"
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginHorizontal="24dp"
-                    android:layout_marginTop="10dp"
+                    android:paddingTop="10dp"
+                    android:layout_marginBottom="8dp"
                     android:visibility="gone"
-                    app:layout_constraintTop_toBottomOf="@+id/tvErrorMessage"
-                    tools:visibility="gone" />
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    tools:visibility="visible" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
