--- a/app/src/main/res/layout/item_bet_list_batch_control_v3.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_v3.xml
@@ -26,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/color_141414_F3F4F5"
+            android:paddingBottom="18dp"
             app:layout_constraintHeight_default="wrap">
 
             <View
@@ -170,8 +171,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:layout_marginHorizontal="24dp"
+                android:layout_marginBottom="8dp"
                 android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@+id/layoutInput" />
+                app:layout_constraintTop_toBottomOf="@+id/layoutInput"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:visibility="visible"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
