--- a/app/src/main/res/layout/bottom_sheet_dialog_parlay_description.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog_parlay_description.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="228dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/color_191919_FCFCFC"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:ignore="SpUsage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -55,6 +56,7 @@
             android:layout_height="wrap_content"
             android:lineSpacingExtra="12dp"
             android:textColor="@color/color_BBBBBB_333333"
+            android:textSize="@dimen/textSize14sp"
             tools:text="3串4是由3个不同赛事组成的4个不同投注\n3个2串1以及1个3串1\n至少2个选项获胜以确保派彩\n不同球种及冠军玩法不能进行串关投注" />
 
     </ScrollView>
