--- a/app/src/main/res/layout/itemview_league_odd_v5.xml
+++ b/app/src/main/res/layout/itemview_league_odd_v5.xml
@@ -325,11 +325,12 @@
 
     <ImageView
         android:id="@+id/league_odd_match_price_boost"
-        android:layout_width="19dp"
-        android:layout_height="14dp"
-        android:paddingEnd="10dp"
-        android:paddingStart="4dp"
-        android:scaleType="centerCrop"
+        android:layout_width="wrap_content"
+        android:layout_height="21dp"
+        android:paddingTop="3dp"
+        android:paddingBottom="3dp"
+        android:paddingEnd="4dp"
+        android:scaleType="centerInside"
         android:src="@drawable/ic_price_v4"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/league_odd_quick_cate_divider"
@@ -340,12 +341,12 @@
     <ImageView
         android:id="@+id/iv_play"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:paddingStart="0dp"
-        android:paddingEnd="8dp"
-        android:scaleType="centerCrop"
+        android:layout_height="21dp"
+        android:paddingTop="1dp"
+        android:paddingBottom="1dp"
+        android:paddingEnd="4dp"
+        android:scaleType="centerInside"
+        android:gravity="center"
         android:src="@drawable/ic_living_ffffff_de000000"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/league_odd_quick_cate_divider"
@@ -357,10 +358,11 @@
     <ImageView
         android:id="@+id/iv_animation"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="21dp"
         android:paddingStart="0dp"
-        android:paddingEnd="8dp"
-        android:scaleType="centerCrop"
+        android:paddingEnd="4dp"
+        android:scaleType="centerInside"
+        android:gravity="center"
         android:src="@drawable/ic_game_schedule"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/league_odd_quick_cate_divider"
@@ -372,7 +374,7 @@
     <TextView
         android:id="@+id/league_odd_match_play_count"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="21dp"
         android:drawablePadding="0dp"
         android:paddingStart="0dp"
         android:gravity="center"
@@ -387,10 +389,10 @@
 
     <ImageView
         android:id="@+id/league_odd_match_chart"
-        android:layout_width="22dp"
-        android:layout_height="22dp"
+        android:layout_width="21dp"
+        android:layout_height="21dp"
         android:padding="1dp"
-        android:scaleType="centerCrop"
+        android:scaleType="centerInside"
         android:src="@drawable/ic_chart"
         app:layout_constraintBottom_toBottomOf="@id/league_odd_quick_cate_divider"
         app:layout_constraintEnd_toStartOf="@id/league_odd_match_favorite"
@@ -400,10 +402,9 @@
 
     <ImageView
         android:id="@+id/league_odd_match_favorite"
-        android:layout_width="22dp"
-        android:layout_height="22dp"
-        android:scaleType="centerCrop"
-        app:layout_goneMarginEnd="0dp"
+        android:layout_width="21dp"
+        android:layout_height="21dp"
+        android:scaleType="centerInside"
         android:src="@drawable/selector_star_v4"
         app:layout_constraintBottom_toBottomOf="@id/league_odd_quick_cate_divider"
         app:layout_constraintEnd_toStartOf="@id/league_neutral"
@@ -412,10 +413,10 @@
 
     <ImageView
         android:id="@+id/league_neutral"
-        android:layout_width="22dp"
-        android:layout_height="22dp"
+        android:layout_width="21dp"
+        android:layout_height="21dp"
         android:padding="1dp"
-        android:scaleType="centerCrop"
+        android:scaleType="centerInside"
         android:src="@drawable/selector_neutral_v5"
         android:visibility="gone"
         tools:visibility="visible"
