--- a/app/src/main/res/layout/tab_odds_detail.xml
+++ b/app/src/main/res/layout/tab_odds_detail.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginHorizontal="6dp"
         android:orientation="horizontal">
 
         <ImageView
