--- a/app/src/main/res/layout/fragment_bottom_sheet_betinfo_item_v2.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_betinfo_item_v2.xml
@@ -39,7 +39,6 @@
                 android:focusable="true"
                 android:gravity="center_vertical"
                 android:orientation="vertical"
-                android:paddingBottom="18dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -344,13 +343,6 @@
                                 tools:text="@string/bet_info_list_minimum_limit_amount"
                                 tools:visibility="visible" />
 
-                            <!--預留空間為了對應鍵盤與警告提示自動增長-->
-                            <!--<View
-                                android:layout_width="match_parent"
-                                android:layout_height="10dp"
-                                android:background="@color/transparent"
-                                app:layout_constraintTop_toBottomOf="@+id/tvErrorMessage"/>-->
-
                             <org.cxct.sportlottery.util.KeyboardView
                                 android:id="@+id/layoutKeyBoard"
                                 android:layout_width="match_parent"
@@ -360,35 +352,31 @@
                                 android:layout_marginBottom="8dp"
                                 android:paddingTop="10dp"
                                 android:visibility="gone"
-                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintBottom_toTopOf="@+id/bottomPaddingView"
                                 tools:visibility="visible" />
 
-                            <!--                            <LinearLayout-->
-                            <!--                                android:id="@+id/ll_keyboard_bg"-->
-                            <!--                                android:layout_width="match_parent"-->
-                            <!--                                android:layout_height="wrap_content"-->
-                            <!--                                android:orientation="horizontal"-->
-                            <!--                                android:background="@color/color_060F20"-->
-                            <!--                                android:paddingStart="8dp"-->
-                            <!--                                android:paddingEnd="8dp"-->
-                            <!--                                android:paddingTop="6dp"-->
-                            <!--                                app:layout_constraintTop_toBottomOf="@+id/et_bet"-->
-                            <!--                                app:layout_constraintBottom_toBottomOf="parent"-->
-                            <!--                                android:paddingBottom="6dp"-->
-                            <!--                                android:visibility="gone" >-->
+                            <View
+                                android:id="@+id/bottomPaddingView"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/margin_18"
+                                app:layout_constraintBottom_toBottomOf="parent"/>
 
-                            <!--                                <org.cxct.sportlottery.ui.common.CustomKeyBoardView-->
-                            <!--                                    android:id="@+id/kv_keyboard"-->
-                            <!--                                    android:layout_width="match_parent"-->
-                            <!--                                    android:layout_height="wrap_content"-->
-                            <!--                                    android:focusable="true"-->
-                            <!--                                    android:background="@color/color_060F20"-->
-                            <!--                                    android:focusableInTouchMode="true"-->
-                            <!--                                    android:keyBackground="@drawable/bg_frame_6dp_white"-->
-                            <!--                                    android:visibility="gone" />-->
+                            <!-- 提示文字和關閉按鈕要在變色背景之上 -->
+                            <!-- 變色背景 start -->
+                            <View
+                                android:id="@+id/v_bet_lock"
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp"
+                                android:background="@color/transparent_black_8"
+                                android:visibility="gone"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintVertical_bias="0.0"
+                                tools:layout_editor_absoluteX="0dp"
+                                tools:visibility="gone" />
+                            <!-- 變色背景 end -->
 
-                            <!--                            </LinearLayout>-->
-
+                            <!-- 提示文字和關閉按鈕 start -->
                             <TextView
                                 android:id="@+id/tv_odd_content_changed"
                                 android:layout_width="match_parent"
@@ -431,6 +419,7 @@
                                 app:layout_constraintBottom_toBottomOf="@+id/tv_odds_content"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="@+id/tv_odds_content" />
+                            <!-- 提示文字和關閉按鈕 end -->
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -440,17 +429,6 @@
 
             </LinearLayout>
 
-            <View
-                android:id="@+id/v_bet_lock"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:background="@color/transparent_black_8"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
-                tools:layout_editor_absoluteX="0dp"
-                tools:visibility="gone" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
