[調整] 投注單夜間模式(單注、串關)投注項注數

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -74,6 +74,7 @@
     <color name="color_313131_e2e2e2">@color/color_313131</color>
     <color name="color_5d5d5d_888888">@color/color_5d5d5d</color>
     <color name="color_bbbbbb_ffffff">@color/color_BBBBBB</color>
+    <color name="color_BBBBBB_060F20">@color/color_BBBBBB</color>
 
 
     <color name="color_FFFFFF_DE000000">@color/color_FFFFFF</color>
