--- a/app/src/main/res/drawable/bg_gradient_bet_info_title.xml
+++ b/app/src/main/res/drawable/bg_gradient_bet_info_title.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#0659C4"
-        android:endColor="#0870F7"
-        android:angle="135"/>
+        android:angle="0"
+        android:endColor="#0659c4"
+        android:startColor="#0870f7" />
 </shape>
