--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -107,6 +107,7 @@
     <color name="color_1A1A1A_0760D4">@color/color_0760D4</color>
     <color name="color_404348_FFFFFF">@color/color_FFFFFF</color>
     <color name="color_FFFFFF_0760D4">@color/color_0760D4</color>
+    <color name="color_0760D4_0760D4">@color/color_0760D4</color>
 
     <color name="color_FF9E3C_FF9E3C">@color/color_FF9E3C</color>
     <color name="color_FF9143_ff9200">@color/color_ff9200</color>
@@ -171,6 +172,8 @@
 
     <color name="color_FFFFFF_DE000000">@color/color_DE000000</color>
     <color name="color_B3FFFFFF_99000000">@color/transparent_black_60</color>
+    <color name="color_80000000_80FFFFFF">@color/transparent_white_50</color>
+    <color name="color_66000000_14000000">@color/transparent_black_8</color>
     <color name="color_AEAEAE_545454">@color/color_AEAEAE</color>
     <color name="color_1E1E1E_FFFFFF">@color/color_FFFFFF</color>
     <color name="color_404040_e5e5e5">@color/color_e5e5e5</color>
@@ -278,6 +281,7 @@
     <color name="transparent">#00000000</color>
     <color name="transparent_black_0">#00000000</color>
     <color name="transparent_black_8">#14000000</color>
+    <color name="transparent_black_40">#66000000</color>
     <color name="transparent_black_50">#80000000</color>
     <color name="transparent_black_60">#99000000</color>
 
