--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -267,25 +267,52 @@
             app:cvTitle="@string/withdraw_password" />
 
 
-        <TextView
-            android:id="@+id/tv_withdrawal_total"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/color_BBBBBB_333333"
-            android:textSize="@dimen/textSize16sp"
-            android:textStyle="bold"
-            android:layout_marginTop="@dimen/margin_15"
-            android:layout_marginStart="@dimen/margin_10"
-            android:text="@string/total_withdrawal"/>
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:background="@drawable/effect_edittext_bg"
+            android:focusable="true"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingStart="10dp"
+            android:paddingEnd="12dp"
+            android:visibility="visible">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="start|center_vertical"
+                android:text="@string/total_withdrawal"
+                android:textColor="@color/color_BBBBBB_333333"
+                android:textSize="@dimen/textSize13sp"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:background="@color/color_1F1F1F_E2E2E2" />
+
+            <TextView
+                android:id="@+id/tv_withdrawal_total"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:textColor="@color/color_BBBBBB_333333"
+                android:text="0.000"
+                android:textSize="@dimen/textSize12sp" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/btn_withdraw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="12dp"
             android:background="@drawable/bg_radius_20_button_dusk"
             android:paddingVertical="9dp"
             android:text="@string/submit"
