--- a/app/src/main/res/drawable/gredient_blue.xml
+++ b/app/src/main/res/drawable/gredient_blue.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#0062C9"
-        android:endColor="#003B79"
+        android:startColor="#0870F7"
+        android:endColor="#0659C4"
         android:angle="270"/>
 </shape>
