--- a/app/src/main/res/layout/dialog_password_verify.xml
+++ b/app/src/main/res/layout/dialog_password_verify.xml
@@ -96,7 +96,7 @@
                 android:layout_height="44dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/bottom_sheet_close"
+                android:text="@string/btn_cancel"
                 android:textAllCaps="true"
                 android:textColor="@color/color_317FFF_0760D4"
                 android:textSize="@dimen/textSize14sp" />
