--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_marginTop="12dp"
-        android:src="@drawable/ic_logo"
+        android:src="@drawable/ic_logo_21"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
