[新增] 主頁球種菜單v2

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -181,6 +181,7 @@
     <color name="color_404040_BCBCBC">@color/color_bcbcbc</color>
     <color name="color_BCBCBC_666666">@color/color_666666</color>
     <color name="color_E2E2E2_D8D8D8">#D8D8D8</color>
+    <color name="color_141414_FCFCFC">@color/color_FCFCFC</color>
 
     <!--region 特殊處理顏色-->
     <color name="home_card_top_text_color">#40FFFFFF</color>
