--- a/app/src/main/res/layout/home_game_card_v2.xml
+++ b/app/src/main/res/layout/home_game_card_v2.xml
@@ -4,58 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cl_card"
     android:layout_width="wrap_content"
-    android:layout_height="50dp"
-    android:background="@drawable/fillet_4dp_home_game_item_blue"
+    android:layout_height="80dp"
+    android:background="@color/color_141414_FCFCFC"
+    android:minWidth="84dp"
     tools:context=".ui.game.home.HomeGameCard"
     tools:ignore="SpUsage">
 
     <ImageView
         android:id="@+id/iv_icon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:contentDescription="@null"
-        android:src="@drawable/ic_game_soon"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_marginStart="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="5dp"
+        android:contentDescription="@null"
+        android:src="@drawable/ic_home_football"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_container"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/tv_container"
+    <TextView
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        app:layout_constraintEnd_toStartOf="@id/iv_icon"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="5dp"
+        android:text="@string/basketball"
+        android:textColor="@color/color_BBBBBB_333333"
+        android:textSize="@dimen/textSize14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_icon" />
 
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="@string/basketball"
-            android:textColor="@color/home_card_text_color"
-            android:textSize="@dimen/textSize12sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/tv_count"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
+    <TextView
+        android:id="@+id/tv_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="5dp"
+        android:includeFontPadding="false"
+        android:maxLines="1"
+        android:textColor="@color/color_909090_666666"
+        android:textSize="@dimen/textSize12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="13125367" />
 
-        <TextView
-            android:id="@+id/tv_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:includeFontPadding="false"
-            android:maxLines="1"
-            android:textColor="@color/home_card_text_color"
-            android:textSize="@dimen/textSize16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/tv_title"
-            app:layout_constraintTop_toBottomOf="@id/tv_title"
-            tools:text="13125367" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:id="@+id/divider"
+        android:layout_width="1dp"
+        android:layout_height="18dp"
+        android:background="@color/color_303030_dddddd"
+        app:layout_constraintBottom_toBottomOf="@id/iv_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/iv_icon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
