自我禁制-輸入框時不會顯示小眼睛

--- a/app/src/main/res/layout/dialog_password_verify.xml
+++ b/app/src/main/res/layout/dialog_password_verify.xml
@@ -55,6 +55,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:endIcon="@drawable/ic_eye_close"
+                app:hasClearButton="true"
+                app:hasFocus="true"
                 app:hideSelectedTitle="true"
                 app:singleText="@string/self_limit_submit_input_password_hint"
                 app:singleTextColor="@color/color_404040_cccccc"
