[調整] 區分單筆/多筆投注之後顯示的畫面

--- a/app/src/main/res/layout/fragment_bet_receipt.xml
+++ b/app/src/main/res/layout/fragment_bet_receipt.xml
@@ -7,11 +7,12 @@
     android:background="@color/transparent_black_0"
     tools:context=".ui.game.betList.receipt.BetReceiptFragment">
 
-    <include
+    <View
         android:id="@+id/tool_bar"
-        layout="@layout/view_toolbar_main"
-        android:background="@color/transparent_black_0"
-        android:visibility="invisible" />
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/tool_bar_notification_height"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/transparent_black_50" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
