[Fix] 25161 [登錄頁聯繫客服]【Android】[英文] 開啟「登錄」頁面，「聯繫客服」文案與原型不一致

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -274,7 +274,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:padding="4dp"
-                    android:text="@string/btn_service"
+                    android:text="@string/btn_service_maintain"
                     android:textColor="@color/colorOrange"
                     android:textSize="@dimen/textSize12sp" />
 
