[調整] 注單 tab 背景色和未選取的文字顏色

--- a/app/src/main/res/layout/fragment_bet_list.xml
+++ b/app/src/main/res/layout/fragment_bet_list.xml
@@ -140,6 +140,7 @@
                         android:id="@+id/betTypeTabLayout"
                         android:layout_width="match_parent"
                         android:layout_height="34dp"
+                        android:background="@color/color_191919_FCFCFC"
                         app:layout_constraintTop_toTopOf="parent"
                         app:tabIndicatorColor="@color/color_317FFF_0760D4"
                         app:tabIndicatorFullWidth="true"
