--- a/app/src/main/res/layout/fragment_money_transfer.xml
+++ b/app/src/main/res/layout/fragment_money_transfer.xml
@@ -8,11 +8,19 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context=".ui.profileCenter.money_transfer.MoneyTransferActivity">
-
+    <androidx.legacy.widget.Space
+        android:id="@+id/space1"
+        android:layout_width="match_parent"
+        android:layout_height="12dp"
+        app:layout_constraintTop_toTopOf="parent" />
     <include
         android:id="@+id/layout_balance"
         layout="@layout/view_account_balance_2"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        app:layout_constraintTop_toBottomOf="@id/space1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <androidx.legacy.widget.Space
         android:id="@+id/space"
