--- a/app/src/main/res/layout/fragment_money_transfer_record.xml
+++ b/app/src/main/res/layout/fragment_money_transfer_record.xml
@@ -24,13 +24,13 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/date_search_bar">
 
-        <org.cxct.sportlottery.ui.component.StatusSelectorView
+        <org.cxct.sportlottery.ui.component.StatusSpinnerView
             android:id="@+id/selector_out_plat"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="44dp"
             android:layout_weight="1"
-            app:arrowAtEnd="true"
-            app:defaultStatusText="@string/all_out_plat" />
+            android:background="@color/color_191919_FCFCFC"
+            app:defaultStatusText="@string/all_out_plat"/>
 
         <View
             android:layout_width="1dp"
@@ -38,12 +38,12 @@
             android:layout_gravity="center_vertical"
             android:background="@color/color_191919_EEEFF0" />
 
-        <org.cxct.sportlottery.ui.component.StatusSelectorView
+        <org.cxct.sportlottery.ui.component.StatusSpinnerView
             android:id="@+id/selector_in_plat"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="44dp"
             android:layout_weight="1"
-            app:arrowAtEnd="true"
+            android:background="@color/color_191919_FCFCFC"
             app:defaultStatusText="@string/all_in_plat" />
 
         <View
@@ -51,13 +51,12 @@
             android:layout_height="14dp"
             android:layout_gravity="center_vertical"
             android:background="@color/color_191919_EEEFF0" />
-
-        <org.cxct.sportlottery.ui.component.StatusSelectorView
+        <org.cxct.sportlottery.ui.component.StatusSpinnerView
             android:id="@+id/selector_transfer_status"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="44dp"
             android:layout_weight="1"
-            app:arrowAtEnd="true"
+            android:background="@color/color_191919_FCFCFC"
             app:defaultStatusText="@string/all_status" />
 
     </LinearLayout>
