--- a/app/src/main/res/layout/activity_vip.xml
+++ b/app/src/main/res/layout/activity_vip.xml
@@ -7,7 +7,8 @@
     android:background="@color/colorBackground"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".ui.vip.VipActivity">
+    tools:context=".ui.vip.VipActivity"
+    tools:ignore="SpUsage,ContentDescription">
 
     <!-- toolBar -->
     <RelativeLayout
@@ -32,10 +33,10 @@
             app:tint="@color/color_BBBBBB_333333" />
 
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:letterSpacing="0.1"
             android:text="@string/member_level"
             android:textColor="@color/color_BBBBBB_333333"
             android:textSize="@dimen/textSize16sp" />
@@ -134,8 +135,8 @@
                             android:id="@+id/tv_hint_recharge_growth"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:maxWidth="200dp"
                             android:layout_marginTop="8dp"
+                            android:maxWidth="200dp"
                             android:textColor="@color/color_909090_666666"
                             android:textSize="@dimen/textSize12sp"
                             app:layout_constraintBottom_toTopOf="@+id/tv_hint_bet_growth"
@@ -147,9 +148,9 @@
                             android:id="@+id/tv_hint_bet_growth"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:maxWidth="200dp"
                             android:layout_marginTop="2dp"
                             android:layout_marginBottom="18dp"
+                            android:maxWidth="200dp"
                             android:textColor="@color/color_909090_666666"
                             android:textSize="@dimen/textSize12sp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -161,10 +162,10 @@
                             android:id="@+id/iv_vip"
                             android:layout_width="120dp"
                             android:layout_height="120dp"
-                            tools:src="@drawable/ic_vip_level_01"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:src="@drawable/ic_vip_level_01" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </RelativeLayout>
@@ -421,8 +422,8 @@
                         android:text="@string/next_level_tips"
                         android:textColor="@color/color_909090_666666"
                         android:textSize="@dimen/textSize12sp"
-                        app:layout_constraintStart_toStartOf="@+id/item_user_level_bar"
                         app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/item_user_level_bar"
                         app:layout_constraintTop_toBottomOf="@+id/item_user_level_bar" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <!--  Vip Level Card Banner  -->
@@ -431,15 +432,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    app:isAutoPlay="false"
-                    app:isClipChildrenMode="true"
                     app:clipChildrenLeftMargin="45dp"
                     app:clipChildrenRightMargin="45dp"
-                    app:pointContainerLeftRightPadding="20dp"
+                    app:isAutoPlay="false"
+                    app:isClipChildrenMode="true"
                     app:isHandLoop="false"
-                    app:showIndicatorInCenter="false"
                     app:pageChangeDuration="800"
-                    app:pointsVisibility="false" />
+                    app:pointContainerLeftRightPadding="20dp"
+                    app:pointsVisibility="false"
+                    app:showIndicatorInCenter="false" />
                 <!--  Vip Level Description  -->
                 <LinearLayout
                     android:id="@+id/ll_third_table"
@@ -465,9 +466,9 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:maxWidth="200dp"
                                 android:layout_marginTop="14dp"
                                 android:layout_marginBottom="14dp"
+                                android:maxWidth="200dp"
                                 android:text="@string/title_rebates_selector_form"
                                 android:textColor="@color/color_317FFF_1F4780"
                                 android:textSize="@dimen/textSize13sp"
@@ -485,11 +486,11 @@
                                 android:id="@+id/sv_third_games"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:minWidth="120dp"
                                 android:layout_gravity="center"
                                 android:layout_marginStart="8dp"
                                 android:layout_marginEnd="8dp"
+                                android:layout_weight="1"
+                                android:minWidth="120dp"
                                 app:arrowAtEnd="false"
                                 app:defaultBottomSheetTitleText="@string/game_play_type"
                                 app:horizontalChainStyle="spread_inside" />
@@ -515,8 +516,8 @@
                             android:layout_height="match_parent"
                             android:orientation="vertical"
                             android:overScrollMode="never"
-                            tools:listitem="@layout/item_third_rebates_form_title"
-                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            tools:listitem="@layout/item_third_rebates_form_title" />
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
             </LinearLayout>
