解决多屏手机(华为)切换回来错误显示标题栏

--- a/app/src/main/res/layout/activity_game_publicity.xml
+++ b/app/src/main/res/layout/activity_game_publicity.xml
@@ -35,6 +35,7 @@
                 layout="@layout/view_toolbar_main"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/tool_bar_height"
+                android:visibility="gone"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
