--- a/app/src/main/res/layout/fragment_bet_list.xml
+++ b/app/src/main/res/layout/fragment_bet_list.xml
@@ -31,7 +31,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/tool_bar_notification_height"
-            android:background="@color/color_191919_FCFCFC"
             android:clickable="true"
             android:focusable="true"
             android:orientation="vertical"
@@ -40,22 +39,23 @@
             <FrameLayout
                 android:id="@+id/fl_title"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_gradient_bet_info_title_background">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/cl_title"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:background="@drawable/bg_gradient_bet_info_title">
+                    android:layout_height="47dp"
+                    android:layout_marginTop="1dp"
+                    android:background="@drawable/bg_gradient_bet_info_title_foreground">
 
                     <ImageView
                         android:id="@+id/iv_arrow"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:background="@color/color_1A000000_1A000000"
-                        android:paddingStart="9dp"
-                        android:paddingEnd="9dp"
-                        android:src="@drawable/ic_arrow_down_white"
+                        android:layout_marginEnd="@dimen/margin_7"
+                        android:paddingHorizontal="@dimen/margin_8"
+                        android:src="@drawable/ic_arrow_gray_down"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -66,17 +66,16 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/margin_8"
                         android:text="@string/bet_list_title"
-                        android:textColor="@color/color_FFFFFF_FFFFFF"
+                        android:textColor="@color/color_317FFF_0760D4"
                         android:textSize="@dimen/textSize14sp"
-                        android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/tv_bet_list_count"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <View
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:background="@drawable/bg_circle_ffffff_ffffff"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:background="@drawable/bg_circle_317fff_0760d4"
                         app:layout_constraintBottom_toBottomOf="@id/tv_bet_list_count"
                         app:layout_constraintEnd_toEndOf="@id/tv_bet_list_count"
                         app:layout_constraintStart_toStartOf="@id/tv_bet_list_count"
@@ -84,12 +83,12 @@
 
                     <TextView
                         android:id="@+id/tv_bet_list_count"
-                        android:layout_width="14dp"
+                        android:layout_width="18dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="12dp"
+                        android:layout_marginStart="16dp"
                         android:gravity="center"
-                        android:textColor="@color/color_317FFF_0760D4"
-                        android:textSize="@dimen/textSize12sp"
+                        android:textColor="@color/color_FFFFFF_FFFFFF"
+                        android:textSize="@dimen/textSize16sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -100,12 +99,12 @@
                         android:id="@+id/tv_balance"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/margin_4"
+                        android:layout_marginEnd="@dimen/margin_10"
                         android:text="0.000"
-                        android:textColor="@color/color_FFFFFF_FFFFFF"
+                        android:textColor="@color/color_909090_666666"
                         android:textSize="@dimen/textSize14sp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@id/iv_arrow"
+                        app:layout_constraintEnd_toStartOf="@id/gray_line"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:text="9,875,241.000" />
 
@@ -114,12 +113,21 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="@dimen/margin_4"
-                        android:textColor="@color/color_FFFFFF_FFFFFF"
+                        android:textColor="@color/color_909090_666666"
                         android:textSize="@dimen/textSize14sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@id/tv_balance"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:text="PHP" />
+
+                    <View
+                        android:id="@+id/gray_line"
+                        android:layout_width="1dp"
+                        android:layout_height="14dp"
+                        android:background="@color/color_BCBCBC_CCCCCC"
+                        app:layout_constraintEnd_toStartOf="@id/iv_arrow"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
